--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,7 @@ steps:
     restoreNugetPackages: true
     msbuildArchitecture: 'x64'
     platform: 'x64'
+- 
 - task: VSTest@2
   inputs:
     testSelector: 'testAssemblies'
@@ -23,6 +24,6 @@ steps:
       !**\*TestAdapter.dll
       !**\obj\**
     searchFolder: '$(System.DefaultWorkingDirectory)'
-
+    vsTestVersion: 'toolsInstaller'
 
  
