--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -17,7 +17,7 @@ variables:
 steps:
 - task: PowerShell@2
   inputs:
-    filePath: 'build.ps'
+    filePath: 'build.ps1'
     arguments: 'EnableSkipStrongName'
 # - task: NuGetToolInstaller@1
 
