--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -10,16 +10,16 @@ trigger:
 pool:
   vmImage: 'windows-latest'
 
-variables:
-  solution: 'sln\OData.Net45.sln'
-  buildPlatform: 'Any CPU'
-  buildConfiguration: 'Release'
+# variables:
+#   solution: 'sln\OData.Net45.sln'
+#   buildPlatform: 'Any CPU'
+#   buildConfiguration: 'Release'
 
 steps:
-# - task: PowerShell@2
-#   inputs:
-#     filePath: 'build.ps1'
-#     arguments: 'EnableSkipStrongName'
+- task: PowerShell@2
+  inputs:
+    filePath: 'build.ps1'
+    arguments: 'EnableSkipStrongName'
 # - task: NuGetToolInstaller@1
 
 # - task: NuGetCommand@2
@@ -36,8 +36,8 @@ steps:
 #   inputs:
 #     platform: '$(buildPlatform)'
 #     configuration: '$(buildConfiguration)'
-- task: DotNetCoreCLI@2
-  inputs:
-    command: 'test'
-    projects: 'test\FunctionalTests\Microsoft.Spatial.Tests\Microsoft.Spatial.Tests.csproj'
-    arguments: '--collect "Code coverage"'
+# - task: DotNetCoreCLI@2
+#   inputs:
+#     command: 'test'
+#     projects: 'test\FunctionalTests\Microsoft.Spatial.Tests\Microsoft.Spatial.Tests.csproj'
+#     arguments: '--collect "Code coverage"'
