--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -16,10 +16,10 @@ pool:
 #   buildConfiguration: 'Release'
 
 steps:
-- task: PowerShell@2
-  inputs:
-    filePath: 'build.ps1'
-    arguments: 'EnableSkipStrongName'
+# - task: PowerShell@2
+#   inputs:
+#     filePath: 'build.ps1'
+#     arguments: 'EnableSkipStrongName'
 # - task: NuGetToolInstaller@1
 
 # - task: NuGetCommand@2
@@ -41,3 +41,18 @@ steps:
 #     command: 'test'
 #     projects: 'test\FunctionalTests\Microsoft.Spatial.Tests\Microsoft.Spatial.Tests.csproj'
 #     arguments: '--collect "Code coverage"'
+
+
+- task: BatchScript@1
+
+  displayName: 'Run script - EnableSkipStrongName'
+
+  inputs:
+
+    filename: '$(Build.SourcesDirectory)\build.cmd'
+
+    arguments: EnableSkipStrongName
+
+    modifyEnvironment: false
+
+  enabled: false
