--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -8,7 +8,8 @@ trigger:
 - master
 
 pool:
-  vmImage: 'windows-latest'
+  #vmImage: 'windows-latest'
+  name: OData
 
 variables:
 #   solution: 'sln\OData.Net45.sln'
