Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -27,7 +27,7 @@ steps:
    
    echo Hello world
    
-   dotnet.exe --list-runtimes
+   dotnet.exe --info
    
 
   displayName: 'Command Line Script'
