--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -32,6 +32,14 @@ steps:
 
   displayName: 'Command Line Script'
 
+- task: DotNetCoreCLI@2
+
+  displayName: 'dotnet build'
+
+  inputs:
+
+    projects: '$(Build.SourcesDirectory)\src\Microsoft.Spatial\Microsoft.Spatial.csproj'
+
 # - task: PowerShell@2
 #   inputs:
 #     filePath: 'build.ps1'
