--- a/azure-pipelines-rolling.yml
+++ b/azure-pipelines-rolling.yml
@@ -203,6 +203,15 @@ steps:
      popd
     preferredAzurePowerShellVersion: 5.1.1
 
+- task: DotNetCoreCLI@2  
+  displayName: 'Test - E2E Test Suite'
+  inputs:
+    command: 'test'
+    arguments: '--configuration $(BuildConfiguration) --no-build --framework net452'
+    projects: |      
+     $(Build.SourcesDirectory)\test\EndToEndTests\Tests\Client\Build.Desktop\Microsoft.Test.OData.Tests.Client.csproj
+
+
 - task: DotNetCoreCLI@2
   displayName: 'Spatial Test'
   inputs:
