--- a/azure-pipelines-rolling.yml
+++ b/azure-pipelines-rolling.yml
@@ -58,6 +58,25 @@ steps:
       $publish.GacInstall("$(gacUtil)")
 
 
+- task: DotNetCoreCLI@2
+  displayName: 'Build Product'  
+  inputs:
+    command: 'build'
+    arguments: '--configuration $(BuildConfiguration)'
+    projects: |
+     $(Build.SourcesDirectory)\src\Microsoft.Spatial\Microsoft.Spatial.csproj
+     $(Build.SourcesDirectory)\src\Microsoft.OData.Edm\Microsoft.OData.Edm.csproj
+     $(Build.SourcesDirectory)\src\Microsoft.OData.Core\Microsoft.OData.Core.csproj
+     $(Build.SourcesDirectory)\src\Microsoft.OData.Client\Microsoft.OData.Client.csproj
+
+- task: UseDotNet@2
+  inputs:
+    version: '2.1.x'
+
+- task: UseDotNet@2
+  inputs:
+    version: '3.1.x'
+
 
 - task: Powershell@2
   displayName: 'Skip strong name validation'
